--- a/ScrubDocuments/index.html
+++ b/ScrubDocuments/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.0/addons/p5.sound.min.js"></script>
     <script src = "sketch.js"></script>
+    <script src = "scrubableImage.js"></script>
 </head>
 <body>
 </body>
