--- a/Scrub10BillionSeals/index.html
+++ b/Scrub10BillionSeals/index.html
@@ -6,7 +6,8 @@
     <title>My p5.js Game</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.0/addons/p5.sound.min.js"></script>
-    <script src = "sketch.js"></script>
+    <script src="sketch.js"></script>
+    <script src="game.js"></script>
 </head>
 <body>
 </body>
