--- a/ScrubReveal/index.html
+++ b/ScrubReveal/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My p5.js Game</title>
+    <title>Window Cleaning Duel</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.0/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.0/addons/p5.sound.min.js"></script>
-    <script src = "sketch.js"></script>
+    <script src="sketch.js"></script>
 </head>
 <body>
 </body>
