--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <container id="deets" class="columns">
             <strong>Details</strong>
             <container>
-                <em>Something</em>
+                <em>A series of games themed around the word "scrub".</em>
             </container>
         </container>
     </container>
